# Bard

./: Cargo.toml  README.md  README.ru.md
example/: Cargo.toml
example/src/: main.rs
src/: embeddings.rs  main.rs  positional_encoding.rs
src/error/: error.rs
src/service/: embeddings.rs  mod.rs  positional_encoding.rs
