[package]
name = "bard"
repository = "https://github.com/Ave-Sergeev/Bard"
version = "0.1.0"
description = "A library that provides the ability to convert tokens into embeddings, as well as to encode their positions"
authors = ["Artem Sergeev <...>"]
edition = "2024"
license = "MIT"
keywords = ["embeddings", "positional-encoding"]
categories = ["encoding", "mathematics"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE*"
]

[dependencies]
ndarray = "0.16.1"
rand = "0.9.0"
